# cryptopals-solutions

./: README.md  meson.build
include/: crypto.hpp
set1/: challenge2.cpp  challenge4.cpp  challenge5.cpp  challenge6.cpp  challenge7.cpp  challenge8.cpp  meson.build
set2/: challenge10.cpp  challenge11.cpp  challenge12.cpp  challenge9.cpp  meson.build
tests/: test_crypto.cpp
tests/set1/: challenge1.cpp  challenge2.cpp  challenge3.cpp  challenge4.cpp
